syntax = "proto2";
package LoginSubCmd;

//此文件对应主消息为 LOGIN_MAIN_CMD
// 
enum enSubCmdID
{
	REQUEST_MOBILE_TOKEN_SUB_CMD						 = 1;//获取手机验证码
	REQUEST_LOGIN_SUB_CMD                       	     = 2;   // 请求登录
	RETURN_LOGININFO_SUB_CMD                             = 3;   // 返回登录网关的信息
	LOGIN_ERROR_CODE_SUB_CMD                             = 4;   // 登录错误返回
	VISITOR_REQUEST_LOGIN_SUB_CMD                        = 5;   // 游客登录
	REQUEST_CREATE_MOBILE_ACCOUNT_SUB_CMD                = 7;   // 手机号注册账号
	RETURN_CREATE_ACCOUNT_RESULT_SUB_CMD                 = 8;   // 账号注册结果
	RETURN_MOBILE_TOKEN_RESULT_SUB_CMD                   = 9;   // 请求手机验证码发送结果
	REQUEST_RESET_PASSWD_TOKEN                           = 10;  // 请求重置密码的手机验证码	
	RESET_NEW_PASSWD_SUB_CMD                             = 11;  // 请求重置密码
	RETURN_RESET_PASSWD_TOKEN                            = 12;  // 请求重置密码的手机验证码结果	
	RETURN_RESET_NEW_PASSWD_RESULT_SUB_CMD               = 13;  // 请求重置密码结果
	TECENT_REQUEST_LOGIN_SUB_CMD                         = 14;   // 腾讯账号登录
	TECENT_LOGIN_RESULT_SUB_CMD                          = 15;   // 腾讯账号登录结果
	REQUEST_CHANGE_DEVICE_TOKEN                          = 16;   // 设备变化 请求验证码
	RETURN_CHANGE_DEVICE_TOKEN                           = 17;   // 设备变化 请求验结果
	REQUEST_MOBILE_LOGIN_SUB_CMD                         = 18;   // 手机号登录账号
	
	OPENTC_REQUEST_LOGIN_SUB_CMD                         =100; //腾讯开放平台请求登录
	OPENTC_LOGIN_RESULT_SUB_CMD                          =101; //腾讯开放平台登录结果
	QH360_REQUEST_LOGIN_SUB_CMD                         = 102;   // 360账号登录
	QH360_LOGIN_RESULT_SUB_CMD                          = 103;   // 360账号登录结果
	BaiDu_REQUEST_LOGIN_SUB_CMD                         = 104;   // 百度账号登录
	BaiDu_LOGIN_RESULT_SUB_CMD                          = 105;   // 百度账号登录结果
	HUAWEI_REQUEST_LOGIN_SUB_CMD						       = 106;	 // 华为帐号登录
	HUAWEI_LOGIN_RESULT_SUB_CMD							    = 107;	 // 华为帐号登录结果
	XMI_REQUEST_LOGIN_SUB_CMD						          = 108;	 // 小米帐号登录
	XMI_LOGIN_RESULT_SUB_CMD							       = 109;	 // 小米帐号登录结果
	OPPO_REQUEST_LOGIN_SUB_CMD						          = 110;	 // OPPO帐号登录
	OPPO_LOGIN_RESULT_SUB_CMD							       = 111;	 // OPPO帐号登录结果
	VIVO_REQUEST_LOGIN_SUB_CMD						          = 112;	 // VIVO帐号登录
	VIVO_LOGIN_RESULT_SUB_CMD							       = 113;	 // VIVO帐号登录结果
	
}
//REQUEST_MOBILE_TOKEN_SUB_CMD						= 1;//获取手机验证码
message CS_Reques_Monile_Token
{
	optional string strPhoneNum	 = 1;//手机号
}

//客服端数据
//版本号
// subCmd  REQUEST_LOGIN_SUB_CMD                         
message LoginRequestInfo
{
	required string account  = 1 ;				
	required string passwd   = 2 ;					
	optional int32 iDevice   = 3 ;					//device id: 1 IOS, 2 Android, 3 Windows
	optional int32 iPlatform = 4 ;					//platform id: 1 Apple Store, 2 360, 3 ?
	optional string iVersion = 5 ;					//具体版本号
	optional uint32	uiSpread = 6;					//推广号
	optional string packageflag   = 7 ; // 包标识 不能为空
	optional string deviceString   = 8 ; //设备号		
	optional string clientIp   = 11 ; // 客户端ip
	optional string phoneNumber  = 12;              // 手机号  更换设备后，需要带上验证码手机号才能登陆
	optional string token = 13;                     // 验证码  更换设备后，需要带上验证码手机号才能登陆
	optional string strCode = 14; 			//验证
	optional string strVerifyCode = 15;		
}

//服务器数据
// subCmd  RETURN_LOGININFO_SUB_CMD
message LoginReturnInfo
{
	required int32  userid = 2 ;	        	//账号对应id
	required string lobbyAddress = 3 ;		//网关地址
	required int32 lobbyPort = 4 ;          //网关端口端口
	required string token = 5;	        	//登录token
	required string account  = 6;	        // 登录对应的账号
	required int32 accountType  = 7;	        // 登录类型,0-普通用户， 1-游客用户， 2-微信用户
}

enum enErrorCode
{
	ERROR_CODE_UNKNOWN      = 0;         // 未知错误
	ERROR_CODE_ACCOUNT      = 1;         // 账号或密码错误
	ERROR_CODE_NOSERVICE    = 2;         // 服务器维护中
	ERROR_CODE_FORBIDUSE    = 3;         // 封号中
	ERROR_CODE_NOEXIST      = 4;         // 账号不存在
	ERROR_CODE_ALREADYEXIST = 5;         // 账号已经被使用
	ERROR_CODE_CREATE_ERR   = 6;         // 账号注册错误,重新再试
	ERROR_CODE_SPERDID_ERR  = 7;		 //推广号错误			
	ERROR_CODE_ACCOUNT_COUNT_LIMIT    = 8;		 //同一设备注册数量限制			
	ERROR_CODE_TECENT_FAIL    = 9;		 //		腾讯验证失败	
	ERROR_CODE_CHANGE_DEVICE    = 10;		 //		换设备 需要验证
	ERROR_CODE_CHANGE_DEVICE_TOKEN_TIME_OUT    = 11;		 //		换设备 token超时 
	ERROR_CODE_CHANGE_DEVICE_TOKEN_ERROR    = 12;		 //		换设备 token错误
	ERROR_CODE_VERIFY_CODE_ERROR = 13 ; //内网口令验证失败
	ERROR_CODE_MOBILE_EXIST = 14;//手机号已被使用
	ERROR_CODE_MOBILE_TOKEN_INVALID = 15;//验证码已失效
			
}

//LOGIN_ERROR_CODE_SUB_CMD  
message LoginErrorCode
{
	required enErrorCode  retcode = 1;       // 错误代码
	optional int32 UserACCID  = 2;
}


//VISITOR_REQUEST_LOGIN_SUB_CMD                        = 5;   // 游客登录
message CS_Visitor_Request_Login 
{
	required string deviceString      = 1;                        // 设备串 	
	required  int32 iDevice   = 2 ;					//device id: 1 IOS, 2 Android, 3 Windows
	required string packageflag      = 3;                        // 包标识
	optional string clientIp   = 4 ; // 客户端ip 	
	optional string strVerifyCode = 5;	
}


//REQUEST_CREATE_MOBILE_ACCOUNT_SUB_CMD                = 7;   // 手机号注册账号
message CS_Request_Mobile_Account
{
	required string phoneNumber      = 1;                                  // 手机号	
	required string passwd           = 2;                                  // 密码	
	required string token            = 3;                                  // 验证码
	optional uint32 uiSpread		 = 4;      					           //推广号
	optional string devicestring   = 5; // 设备号 不能为空
	optional string packageflag   = 6 ; // 包标识 不能为空
	required  int32 iDevice   = 7 ;					//device id: 1 IOS, 2 Android, 3 Windows
	optional string clientIp   = 8 ; // 客户端ip 

}

//RETURN_CREATE_ACCOUNT_RESULT_SUB_CMD                 = 8;   // 账号注册结果
message SC_Create_Account_Result
{
	required int32  retCode            = 1;                                  // 注册结果  0 成功 1 失败	
}

//RETURN_MOBILE_TOKEN_RESULT_SUB_CMD                   = 9;   // 请求手机验证码发送结果
message SC_Request_Mobile_Token_Result
{
	required int32  retCode            = 1;                                  // 注册结果  0 成功 1 失败	
}
	
//REQUEST_RESET_PASSWD_TOKEN                           = 10;  // 请求重置密码的手机验证码	
message CS_Request_Reset_Passwd_Token
{
 	required string account      = 1;                                  // 账号	
	required string phoneNumber      = 2;                                  // 手机号	
	optional string packageflag   = 3 ; // 包标识 不能为空
}


//RESET_NEW_PASSWD_SUB_CMD                             = 11;  // 请求重置密码
message CS_Request_Reset_Passwd
{
 	required string account      = 1;                                  // 账号	
	required string phoneNumber      = 2;                                  // 手机号	
	required string passwd           = 3;                                  // 密码	
	required string token            = 4;                                  // 验证码	
}

//	RETURN_RESET_PASSWD_TOKEN                            = 12;  // 请求重置密码的手机验证码结果	
message SC_Return_Reset_Passwd_Token_Result
{
	required int32  retCode            = 1;                                  //  0 成功 1 失败  2 账号不存在  3.账号绑定的手机不对 或不存在 4. 请求频繁	
}

//	RETURN_RESET_NEW_PASSWD_RESULT_SUB_CMD               = 13;  // 请求重置密码结果
message SC_Return_Reset_New_Passwd_Result
{
	required int32  retCode            = 1;                                  //  0 成功 1 手机号不对或者未绑定 2 验证码不对 3 账号不对 	
}


//TECENT_REQUEST_LOGIN_SUB_CMD                         = 14;   // 腾讯账号登录
message CS_Tecent_Request_Login 
{
	required  int32 tecentType   = 1 ;					//1 wx 2 wx重新登录
	required string openid      = 2;                        // openid	 //account
	required string token      = 3;                        // code 	//token
	required string deviceString      = 4;                        // 设备串 	
	required  int32 iDevice   = 5 ;					//device id: 1 IOS, 2 Android, 3 Windows
	required string packageflag      = 6;                        // 包标识 
	optional string clientIp   = 7 ; // 客户端ip	
	optional int32 loginType   = 8 ; // 1 app 2gzh  3小游戏
	optional string strFace    = 9 ; //小游戏获取头像
	optional string strNick    = 10 ; //小游戏获取昵称
	optional int32 iSex     = 11 ; //小游戏获取性别	
	optional uint32 uiSpread  = 12 ; //推广者ID
	optional string strAgentID = 13;
	optional string strVerifyCode = 14;	
}


//TECENT_LOGIN_RESULT_SUB_CMD                          = 15;   // 腾讯账号登录结果
message SC_Tecent_Lgin_Result
{
	required enErrorCode  retcode = 1;       // 错误代码
	optional string account       = 2 ;      // 登录成功时返回玩家帐号	
	optional string token         = 3 ;      // 登录成功时返回玩家token用于重新登录	
}


// 更换设备登录 获取验证码
//REQUEST_CHANGE_DEVICE_TOKEN                          = 16;   // 设备变化 请求验证码
message CS_Request_Change_Device_Token
{
 	required string account      = 1;                                  // 账号	
	required string phoneNumber  = 2;                                  // 手机号	
	required string packageflag  = 3;                        // 包标识 	
}

// RETURN_CHANGE_DEVICE_TOKEN                           = 17;   // 设备变化 请求验结果
message SC_Return_Change_Device_Token
{
	required  int32 retcode   = 1 ;			 // 1  账号不存在  2 账号没绑定 3 手机与绑定的不一至  4. 重复请求  5. 系统错误	
	optional string phoneNumber  = 2;                                  // 手机号	
}


//OPENTC_REQUEST_LOGIN_SUB_CMD   // 应用包账号登录
message CS_Opentc_Request_Login 
{
	required  int32 loginType   = 1; // 1 正常登录 2 重连
	required string accesstoken      = 2;  // token 	
	required string openid      = 3;  // token 	
	required string deviceString      = 4;                        // 设备串 	
	required  int32 iDevice   = 5;					//device id: 1 IOS, 2 Android, 3 Windows
	required string packageflag      = 6;                        // 包标识 
	optional string clientIp   = 7; // 客户端ip
	optional uint32 uiSpread  = 8; //推广者ID
	optional string strFace    = 9 ; //小游戏获取头像
	optional string strNick    = 10 ; //小游戏获取昵称
	optional int32 iSex     = 11 ; //小游戏获取性别	
}

//OPENTC_LOGIN_RESULT_SUB_CMD  // 应用包账号登录结果
message SC_Opentc_Lgin_Result
{
	required enErrorCode  retcode = 1;       // 错误代码
	optional string account       = 2 ;      // 登录成功时返回玩家帐号	
	optional string token         = 3 ;      // 登录成功时返回玩家token用于重新登录
}

//QH360_REQUEST_LOGIN_SUB_CMD   // 360账号登录
message CS_QH360_Request_Login 
{
	required  int32 loginType   = 1; // 1 正常登录 2 重连
	required string token      = 2;  // token 	
	required string deviceString      = 3;                        // 设备串 	
	required  int32 iDevice   = 4;					//device id: 1 IOS, 2 Android, 3 Windows
	required string packageflag      = 5;                        // 包标识 
	optional string clientIp   = 6; // 客户端ip
	optional uint32 uiSpread  = 7; //推广者ID
}

//QH360_LOGIN_RESULT_SUB_CMD  // 360账号登录结果
message SC_QH360_Lgin_Result
{
	required enErrorCode  retcode = 1;       // 错误代码
	optional string account       = 2 ;      // 登录成功时返回玩家帐号	
	optional string token         = 3 ;      // 登录成功时返回玩家token用于重新登录
}

//BaiDu_REQUEST_LOGIN_SUB_CMD            百度账号登录
message CS_BaiDu_Request_Login 
{
	required  int32 loginType   = 1; // 1 正常登录 2 重连
	required string token      = 2;  // token 	
	required string uid        = 3;  // token 	
	required string deviceString      = 4;                        // 设备串 	
	required  int32 iDevice   = 5;					//device id: 1 IOS, 2 Android, 3 Windows
	required string packageflag      = 6;                        // 包标识 
	optional string clientIp   = 7; // 客户端ip
	optional uint32 uiSpread  = 8; //推广者ID
}

//BaiDu_LOGIN_RESULT_SUB_CMD             百度账号登录结果
message SC_BaiDu_Lgin_Result
{
	required enErrorCode  retcode = 1;       // 错误代码
	optional string account       = 2 ;      // 登录成功时返回玩家帐号	
	optional string token         = 3 ;      // 登录成功时返回玩家token用于重新登录
}

//HUAWEI_REQUEST_LOGIN_SUB_CMD	//华为帐号登录
message CS_HW_Request_Login
{
	required int32 iLoginType		= 1;//登录模式1登录2重连
	required string strToken		= 2;//token,重连使用 	
	optional string strTs			= 3;//ts时间戳,取自客户端login返回到ts参数
	required string strPlayID		= 4;//客户端login返回到ID,华为为玩家分配到唯一标识
	optional string strPlayerLevel	= 5;//玩家等级,取自客户端login返回的playerLevel参数
	optional string strPlayerSSign	= 6;//登录签名,取自客户端login返回的gamekAuthSign参数
	required string strName			= 7;//玩家昵称,取自客户端login返回的displatName参数
	required string strDevice		= 8;//设备串 	
	required int32 iDevice   		= 9;//device id: 1 IOS, 2 Android, 3 Windows
	required string packageflag		= 10;// 包标识 
	optional string clientIp   		= 11;//客户端ip
	optional uint32 uiSpread  		= 12;//推广者ID
}

//HUAWEI_LOGIN_RESULT_SUB_CMD	//华为帐号登录结果
message SC_HW_Login_Result
{
	required enErrorCode retcode	= 1;// 错误代码
	optional string strToken		= 2;// 登录成功时返回玩家token用于重新登录
}

//XMI_REQUEST_LOGIN_SUB_CMD			 // 小米帐号登录
message CS_XMI_Request_Login 
{
	required  int32 loginType   = 1; // 1 正常登录 2 重连
	required string token      = 2;  // token 	
	required string uid        = 3;   	
	required string deviceString      = 4;                        // 设备串 	
	required  int32 iDevice   = 5;					//device id: 1 IOS, 2 Android, 3 Windows
	required string packageflag      = 6;                        // 包标识 
	optional string clientIp   = 7; // 客户端ip
	optional uint32 uiSpread  = 8; //推广者ID
}

//XMI_LOGIN_RESULT_SUB_CMD						 // 小米帐号登录结果
message SC_XMI_Lgin_Result
{
	required enErrorCode  retcode = 1;       // 错误代码
	optional string account       = 2 ;      // 登录成功时返回玩家帐号	
	optional string token         = 3 ;      // 登录成功时返回玩家token用于重新登录
}

//OPPO_REQUEST_LOGIN_SUB_CMD					 // OPPO帐号登录
message CS_OPPO_Request_Login 
{
	required  int32 loginType   = 1; // 1 正常登录 2 重连
	required string token      = 2;  // token 	
	required string ssoid        = 3;   	
	required string deviceString      = 4;                        // 设备串 	
	required  int32 iDevice   = 5;					//device id: 1 IOS, 2 Android, 3 Windows
	required string packageflag      = 6;                        // 包标识 
	optional string clientIp   = 7; // 客户端ip
	optional uint32 uiSpread  = 8; //推广者ID
}

//OPPO_LOGIN_RESULT_SUB_CMD						 // OPPO帐号登录结果
message SC_OPPO_Login_Result
{
	required enErrorCode  retcode = 1;       // 错误代码
	optional string account       = 2 ;      // 登录成功时返回玩家帐号	
	optional string token         = 3 ;      // 登录成功时返回玩家token用于重新登录
}

//VIVO_REQUEST_LOGIN_SUB_CMD						   // VIVO帐号登录
message CS_VIVO_Request_Login 
{
	required  int32 loginType   = 1; // 1 正常登录 2 重连
	required string token      = 2;  // token 	
	required string openid        = 3;
	required string name        = 4;   	
	required string deviceString      = 5;                        // 设备串 	
	required  int32 iDevice   = 6;					//device id: 1 IOS, 2 Android, 3 Windows
	required string packageflag      = 7;                        // 包标识 
	optional string clientIp   = 8; // 客户端ip
	optional uint32 uiSpread  = 9; //推广者ID
}

//VIVO_LOGIN_RESULT_SUB_CMD							 // VIVO帐号登录结果
message SC_VIVO_Login_Result
{
	required enErrorCode  retcode = 1;       // 错误代码
	optional string account       = 2 ;      // 登录成功时返回玩家帐号	
	optional string token         = 3 ;      // 登录成功时返回玩家token用于重新登录
}
